# mlali-agents

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  agents.py  api.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  streamlit.py
public/: example_question.txt
src/datasets/data_regulation/: Regulasi Tempat Wisata.xlsx
src/db/db_regulation/: index.faiss  index.pkl
src/db/db_travelGuide/: index.pkl
src/db/db_travelPlanner/: index.pkl
store/: create_db.py  scraping.py
utils/: agents.py  agents_form.py  create_graph_image.py  debug_time.py  llm.py  raw_process.py  retrieve.py  states.py
